# rustagent

./: .gitignore  Cargo.toml  README.md  index.html
src/: agent.rs  dom_utils.rs  lib.rs  llm.rs
tests/: integration_test.rs  test_page.html
