[package]
name = "rustagent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile to WASM dynamic library

[dependencies]
wasm-bindgen = "0.2"     # Bind Rust to JS
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"       # JSON for API calls
reqwest = { version = "=0.10.10", features = ["json"] }  # HTTP client for LLM API
tokio = { version = "0.2", features = ["macros", "sync", "rt-multi-thread"] }  # Async runtime for reqwest 0.10.x
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Window"
]}

[profile.release]
opt-level = 3  # Optimize for performance

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
mock-llm = []